@@ -1,9 +1,9 @@
-﻿//1918
+﻿//1925
 // 
 // This code is automatically generated at build time. Any edits made to this file should be instead applied to its template (AssemblyFileData.tt)
 // 
 
 using System.Reflection;
 using EliteMonitor.Utilities;
-[assembly: AssemblyFileVersion("1.0.0.1918")]
-[assembly: AssemblyBuildTime("2018-01-26T17:20:36Z")]
+[assembly: AssemblyFileVersion("1.0.0.1925")]
+[assembly: AssemblyBuildTime("2018-01-30T18:07:16Z")]
